--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     runtimeOnly 'mysql:mysql-connector-java'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    implementation 'com.google.guava:guava:31.1-jre'
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.8'
 
     compileOnly 'org.projectlombok:lombok'
