--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=false&characte
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
+#
+logging.file.name=./logs/os-gov.log
+logging.level.root=info
+logging.level.org.springframework.test.context.jdbc=debug
